--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <div class="p-8">
-      <h1 class="text-4xl font-bold mb-4">Theme Switcher</h1>
+      <h1 class="text-4xl font-bold mb-2">TailwindCSS example</h1>
+      <p class="text-xl text-theme-fg-muted mb-4">This example transforms tokens stored on GitHub to Style Dictionary ready files which in turn triggers TailwindCSS.</p>
       <button class="p-2 bg-theme-accent-default text-theme-fg-onAccent font-bold" id="switch" onclick="toggleTheme()">Switch</button>
     </div>
     <script>
